# rtdl-revisiting-models

./: .gitignore  README.md  requirements.txt
docs/: index.html  paper_tabular_dl_revisiting_models.html  search.js
output/california_housing/ft_transformer/tuned/: 0.toml  1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
output/california_housing/ft_transformer/tuned/0/: stats.json
output/california_housing/ft_transformer/tuned/1/: stats.json
output/california_housing/ft_transformer/tuned/10/: stats.json
output/california_housing/ft_transformer/tuned/11/: stats.json
output/california_housing/ft_transformer/tuned/12/: stats.json
output/california_housing/ft_transformer/tuned/13/: stats.json
output/california_housing/ft_transformer/tuned/14/: stats.json
output/california_housing/ft_transformer/tuned/2/: stats.json
output/california_housing/ft_transformer/tuned/3/: stats.json
output/california_housing/ft_transformer/tuned/4/: stats.json
output/california_housing/ft_transformer/tuned/5/: stats.json
output/california_housing/ft_transformer/tuned/6/: stats.json
output/california_housing/ft_transformer/tuned/7/: stats.json
output/jannis/ft_transformer/tuned/: 0.toml  1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
package/: LICENSE  Makefile  README.md  environment-dev.yaml  environment-package.yaml  example.ipynb  paper_tabular_dl_revisiting_models.py  pyproject.toml
package/tests/: test_basics.py
(+19 files in other folders)
